# talatrivia

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c0b2492ae26_create_questions_and_answer_options_.py  527eb9b3173c_create_users_table.py  dae056918e81_create_trivia_tables_and_user_answer.py
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/routes/: auth.py  question.py  trivia.py  users.py
app/core/: scoring.py  security.py
app/models/: __init__.py  answer_option.py  question.py  trivia.py  trivia_participant.py  trivia_question.py  user.py  user_answer.py
app/schemas/: auth.py  question.py  trivia.py  user.py
app/services/: auth.py  question.py  trivia.py
docs/: api-endpoints.md  database.md
scripts/: create_admin.py
tests/: conftest.py  test_auth.py  test_e2e.py  test_permissions.py  test_play_security.py  test_scoring.py  test_smoke.py
