[project]
name = "talatrivia"
version = "0.0.1"
description = "Rest API para gestionar trivias de RRHH"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2,<3.3",
    "pydantic-settings>=2.6,<3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]