[project]
name = "talatrivia"
version = "0.0.1"
description = "Rest API para gestionar trivias de RRHH"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.33",
    "sqlalchemy>=2.0,<2.1",
    "psycopg[binary]>=3.2,<3.3",
    "pydantic-settings>=2.6,<3",
    "alembic>=1.18,<1.19",
    "PyJWT>=2.12,<2.13",
    "bcrypt>=5.0,<6",
    "email-validator>=2.2,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8,<0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "FAST"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]
"alembic/versions/*.py" = ["F401"]